# share-to-orpheusdl

./: .gitignore  README.md
app/: Cargo.toml
app/src/: main.rs  tray.rs
app/src/core/: config.rs  logger.rs  mod.rs  queue.rs  server.rs  traymenu.rs
extension/: background.js  manifest.json  options.html  options.js
